[tool.poetry]
name = "gerador-fmv"
version = "0.1.0"
description = ""
authors = ["Rodger <rodgerdias6@gmail.com>"]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
customtkinter = "^5.2.2"
pillow = "^11.1.0"
ctkmessagebox = "^2.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
